feat: implement communication service